--- a/aref.html
+++ b/aref.html
@@ -24,7 +24,7 @@
         }
     </style>
     <center>
-        <image src="khoirul.jpg" alt="identitas diri" class="lingkaran"></image> 
+        <image src="wa.png.jpeg" alt="identitas diri" class="lingkaran"></image> 
     </center>
     <div class="text">
         <h1><i>halo saya muhammad khoirul bariyyah</i></h1>
